--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="home.html"><strong><em>HOME</em></strong></a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html"><strong><em>HOME</em></strong></a></li>
         <li class="nav-item"><a class="nav-link" href="trailer.html"><strong><em>TRAILER</em></strong></a></li>
         <li class="nav-item"><a class="nav-link" href="gallery.html"><strong><em>GALLERY</em></strong></a></li>
         <li class="nav-item"><a class="nav-link" href="character.html"><strong><em>CHARACTERS</em></strong></a></li>
