--- a/trailer.html
+++ b/trailer.html
@@ -53,7 +53,7 @@ body {
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="home.html"><strong><em>HOME</em></strong></a>
+                  <a class="nav-link" href="index.html"><strong><em>HOME</em></strong></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="trailer.html"><em><strong>TRAILER</strong></em></a>
