--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 <!-- site metas -->
-<title>index</title>
+<title>home</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">	
@@ -51,7 +51,7 @@ body {
               <ul class="navbar-nav mr-auto">
                 
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html"><strong><em>HOME</em></strong></a>
+                  <a class="nav-link" href="home.html"><strong><em>HOME</em></strong></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="trailer.html"><em><strong>TRAILER</strong></em></a>
